applys fix for handle illegibility

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -280,7 +280,6 @@ html .user_stats span{
   margin-top: 18%;
   font-size: 22px;
   color: white;
-  font-family: 'Rock Salt', cursive;
 }
 
 #menu {
